--- a/dustland.css
+++ b/dustland.css
@@ -196,6 +196,33 @@
         box-shadow: 0 0 0 2px #8bd98d;
     }
 
+.xpbar {
+  position: relative;
+  width: 100%;
+  height: 4px;
+  background: #273027;
+  border-radius: 4px;
+  overflow: hidden;
+  transition: height .2s;
+}
+.xpbar .fill {
+  height: 100%;
+  background: #8bd98d;
+  transition: width .2s;
+}
+.xpbar:hover {
+  height: 16px;
+}
+.xpbar:hover::after {
+  content: attr(data-xp);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 10px;
+  color: #fff;
+}
+
     .row {
         display: flex;
         flex-wrap: wrap;
